unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/Open_Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Open Opportunity Snapshot</label>
    <nameField>
        <label>Open Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>