unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/ACV_Services__c.field-meta.xml
<CustomField>
    <fullName>ACV_Services__c</fullName>
    <label>ACV+Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>