unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/MEDDPICC_Total__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Total__c</fullName>
    <label>MEDDPICC Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>