unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/Net_NACV__c.field-meta.xml
<CustomField>
    <fullName>Net_NACV__c</fullName>
    <label>Net NACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>