unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/Net_NACV_Services__c.field-meta.xml
<CustomField>
    <fullName>Net_NACV_Services__c</fullName>
    <label>Net NACV + Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>