unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/Net_TCV__c.field-meta.xml
<CustomField>
    <fullName>Net_TCV__c</fullName>
    <description>Total Deal value (including MY component) less Services</description>
    <inlineHelpText>Total Deal value (including MY component) less Services</inlineHelpText>
    <label>Net TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>