unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <label>Opportunity Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>