unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>Sum of Services added to an Opp.</description>
    <inlineHelpText>Sum of Services added to an Opp from quote object</inlineHelpText>
    <label>Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>