unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration__c</fullName>
    <label>Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>