unpackaged/main/default/objects/Open_Opportunity_Snapshot__c/fields/True_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>True_Forecast_Category__c</fullName>
    <label>True Forecast Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>